--- a/world/ruby-minitar/.artixlinux/pkgbase.yaml
+++ b/world/ruby-minitar/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: ruby-minitar
-  version: 0.9-7
+  version: 0.9-9
   arch:
     - any
   pkgname:
     - ruby-minitar
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.9-7
+    version: 0.9-9
     packages:
-      - ruby-minitar-0.9-7-any.pkg.tar.zst
+      - ruby-minitar-0.9-9-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
