--- a/world/ruby-minitest-retry/.artixlinux/pkgbase.yaml
+++ b/world/ruby-minitest-retry/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: ruby-minitest-retry
-  version: 0.2.3-1
+  version: 0.2.5-2
   arch:
     - any
   pkgname:
     - ruby-minitest-retry
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.2.3-1
+    version: 0.2.5-2
     packages:
-      - ruby-minitest-retry-0.2.3-1-any.pkg.tar.zst
+      - ruby-minitest-retry-0.2.5-2-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
