--- a/world/ruby-msgpack/.artixlinux/pkgbase.yaml
+++ b/world/ruby-msgpack/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-msgpack
-  version: 1.7.5-1
+  version: 1.8.0-2
   arch:
     - x86_64
   pkgname:
     - ruby-msgpack
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.7.5-1
+    version: 1.8.0-2
     packages:
-      - ruby-msgpack-1.7.5-1-x86_64.pkg.tar.zst
+      - ruby-msgpack-1.8.0-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
