--- a/world/ruby-net-http-persistent/.artixlinux/pkgbase.yaml
+++ b/world/ruby-net-http-persistent/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-net-http-persistent
-  version: 4.0.3-1
+  version: 4.0.3-3
   arch:
     - any
   pkgname:
     - ruby-net-http-persistent
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 4.0.3-1
+    version: 4.0.3-3
     packages:
-      - ruby-net-http-persistent-4.0.3-1-any.pkg.tar.zst
+      - ruby-net-http-persistent-4.0.3-3-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
