--- a/world/ruby-nio4r/.artixlinux/pkgbase.yaml
+++ b/world/ruby-nio4r/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-nio4r
-  version: 2.7.4-1
+  version: 2.7.4-3
   arch:
     - x86_64
   pkgname:
     - ruby-nio4r
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.7.4-1
+    version: 2.7.4-3
     packages:
-      - ruby-nio4r-2.7.4-1-x86_64.pkg.tar.zst
+      - ruby-nio4r-2.7.4-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
