--- a/world/ruby-nokogiri/.artixlinux/pkgbase.yaml
+++ b/world/ruby-nokogiri/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-nokogiri
-  version: 1.18.3-1
+  version: 1.18.3-4
   arch:
     - x86_64
   pkgname:
     - ruby-nokogiri
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -25,15 +25,16 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: null
-    packages: []
+    version: 1.18.3-4
+    packages:
+      - ruby-nokogiri-1.18.3-4-x86_64.pkg.tar.zst
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 1.18.3-1
+    version: 1.18.3-3
     packages:
-      - ruby-nokogiri-1.18.3-1-x86_64.pkg.tar.zst
+      - ruby-nokogiri-1.18.3-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
