--- a/world/ruby-parser/.artixlinux/pkgbase.yaml
+++ b/world/ruby-parser/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-parser
-  version: 3.3.4.1-1
+  version: 3.3.7.3-2
   arch:
     - any
   pkgname:
     - ruby-parser
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.3.4.1-1
+    version: 3.3.7.3-2
     packages:
-      - ruby-parser-3.3.4.1-1-any.pkg.tar.zst
+      - ruby-parser-3.3.7.3-2-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
