--- a/world/ruby-protocol-http1/.artixlinux/pkgbase.yaml
+++ b/world/ruby-protocol-http1/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-protocol-http1
-  version: 0.30.0-1
+  version: 0.34.0-2
   arch:
     - any
   pkgname:
     - ruby-protocol-http1
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.30.0-1
+    version: 0.34.0-2
     packages:
-      - ruby-protocol-http1-0.30.0-1-any.pkg.tar.zst
+      - ruby-protocol-http1-0.34.0-2-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
