--- a/world/ruby-rack/.artixlinux/pkgbase.yaml
+++ b/world/ruby-rack/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-rack
-  version: 3.1.11-1
+  version: 3.1.12-2
   arch:
     - any
   pkgname:
     - ruby-rack
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.1.11-1
+    version: 3.1.12-2
     packages:
-      - ruby-rack-3.1.11-1-any.pkg.tar.zst
+      - ruby-rack-3.1.12-2-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
