--- a/world/ruby-sinatra/.artixlinux/pkgbase.yaml
+++ b/world/ruby-sinatra/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: ruby-sinatra
-  version: 4.1.0-3
+  version: 4.1.1-2
   arch:
     - any
   pkgname:
@@ -10,11 +10,11 @@ pkgbase:
     - ruby-rack-protection
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -33,11 +33,11 @@ repos:
     version: null
     packages: []
   world:
-    version: 4.1.0-3
+    version: 4.1.1-2
     packages:
-      - ruby-sinatra-4.1.0-3-any.pkg.tar.zst
-      - ruby-sinatra-contrib-4.1.0-3-any.pkg.tar.zst
-      - ruby-rack-protection-4.1.0-3-any.pkg.tar.zst
+      - ruby-sinatra-4.1.1-2-any.pkg.tar.zst
+      - ruby-sinatra-contrib-4.1.1-2-any.pkg.tar.zst
+      - ruby-rack-protection-4.1.1-2-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
