--- a/world/ruby-sinatra/PKGBUILD
+++ b/world/ruby-sinatra/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Andreas 'Segaja' Schleifer <segaja at archlinux dot org>
 
 pkgname=(ruby-sinatra ruby-sinatra-contrib ruby-rack-protection)
-pkgver=4.1.0
-pkgrel=3
+pkgver=4.1.1
+pkgrel=2
 arch=('any')
 url='https://sinatrarb.com/'
 license=('MIT')
@@ -35,16 +35,14 @@ checkdepends=(
   ruby-rackup
   ruby-rake
   ruby-rdiscount
-  ruby-rdoc
   ruby-rspec
   ruby-sass-embedded
-  ruby-thin
   ruby-tilt
   ruby-zeitwerk
 )
 options=('!emptydirs')
 source=("https://github.com/sinatra/sinatra/archive/v${pkgver}/sinatra-v${pkgver}.tar.gz")
-sha512sums=('e0605da6e0f5fb154b6d9574ac5b661077238f03731685bc9558e713a35b3615c445660d5eccffefab7d5eb536d6819ccb726d0f40be37b343e1cd5e02ea9678')
+sha512sums=('d9022acc28048f6424f077216bfc620000887afdc5fb34152610d3f0a5139cea367a165cb6caa1e0b1f02fb8328b563d6993f16419d798bde50e45450b558f2d')
 
 prepare() {
   cd "sinatra-${pkgver}"
@@ -175,28 +173,45 @@ _check() {
 
   cd "$srcdir/sinatra-${pkgver}/${_gemname}"
 
-  echo "${_gemname}"
+  echo ">> running tests for ${_gemname} ..."
   GEM_PATH="${_gempath}" rake "${_rake_target}"
 }
 
 package_ruby-sinatra() {
   pkgdesc='Classy web-development dressed in a DSL'
-  depends=('ruby' 'ruby-mustermann' 'ruby-rack' 'ruby-rackup'
-           'ruby-rack-protection' 'ruby-rack-session' 'ruby-tilt')
+  depends=(
+    ruby
+    ruby-mustermann
+    ruby-rack
+    ruby-rack-protection
+    ruby-rack-session
+    ruby-tilt
+  )
 
   _package "sinatra" "LICENSE"
 }
 
 package_ruby-sinatra-contrib() {
   pkgdesc='Collection of useful Sinatra extensions'
-  depends=('ruby' 'ruby-multi_json' 'ruby-mustermann' 'ruby-rack-protection' 'ruby-sinatra' 'ruby-tilt')
+  depends=(
+    ruby
+    ruby-multi_json
+    ruby-mustermann
+    ruby-rack-protection
+    ruby-sinatra
+    ruby-tilt
+  )
 
   _package "sinatra-contrib" "LICENSE"
 }
 
 package_ruby-rack-protection() {
   pkgdesc='Protect against typical web attacks, works with all Rack apps, including Rails'
-  depends=('ruby' 'ruby-rack')
+  depends=(
+    ruby
+    ruby-base64
+    ruby-rack
+  )
 
   _package "rack-protection" "License"
 }
