--- a/world/ruby-rdoc/.artixlinux/pkgbase.yaml
+++ b/world/ruby-rdoc/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-rdoc
-  version: 6.6.3.1-2
+  version: 6.10.0-57
   arch:
     - any
   pkgname:
     - ruby-rdoc
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 6.6.3.1-2
+    version: 6.10.0-57
     packages:
-      - ruby-rdoc-6.6.3.1-2-any.pkg.tar.zst
+      - ruby-rdoc-6.10.0-57-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
