--- a/world/ruby-redcloth/.artixlinux/pkgbase.yaml
+++ b/world/ruby-redcloth/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: ruby-redcloth
-  version: 4.3.4-3
+  version: 4.3.4-5
   arch:
     - x86_64
   pkgname:
     - ruby-redcloth
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 4.3.4-3
+    version: 4.3.4-5
     packages:
-      - ruby-redcloth-4.3.4-3-x86_64.pkg.tar.zst
+      - ruby-redcloth-4.3.4-5-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
