--- a/world/ruby-regexp_parser/PKGBUILD
+++ b/world/ruby-regexp_parser/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=ruby-regexp_parser
-pkgver=2.6.0
-pkgrel=3
+pkgver=2.10.0
+pkgrel=2
 pkgdesc='A library for tokenizing, lexing, and parsing Ruby regular expressions'
 arch=(any)
 url='https://github.com/ammar/regexp_parser'
@@ -20,11 +20,12 @@ makedepends=(
 checkdepends=(
   ruby-benchmark-ips
   ruby-ice_nine
+  ruby-leto
   ruby-regexp_property_values
 )
 options=(!emptydirs)
 source=(https://github.com/ammar/regexp_parser/archive/v$pkgver/$pkgname-$pkgver.tar.gz)
-sha256sums=('6582ed51cd17d3d71ba8373f6803942e10674cb91f0e7724a49b21be61eea8b7')
+sha256sums=('2052d83d84c621b68f64685ff74bdc3babf0aa741d8cb5f36967700e34eabbb6')
 
 prepare() {
   cd regexp_parser-$pkgver
@@ -34,7 +35,7 @@ prepare() {
 build() {
   local _gemdir="$(gem env gemdir)"
   cd regexp_parser-$pkgver
-  rake build
+  CI="true" rake build
   gem build regexp_parser.gemspec
   gem install \
     --local \
