--- a/world/ruby-rubocop-ast/PKGBUILD
+++ b/world/ruby-rubocop-ast/PKGBUILD
@@ -4,8 +4,8 @@
 
 _gemname='rubocop-ast'
 pkgname="ruby-${_gemname}"
-pkgver=1.30.0
-pkgrel=3
+pkgver=1.39.0
+pkgrel=1.1
 pkgdesc="RuboCop's AST extensions and NodePattern functionality"
 arch=('any')
 url="https://github.com/rubocop/${_gemname}"
@@ -15,27 +15,21 @@ depends=(
   ruby-parser
 )
 makedepends=(
+  ruby-rdoc
+)
+checkdepends=(
   ruby-bundler
   ruby-oedipus_lex
   ruby-rake
-  ruby-rdoc
   ruby-rspec
 )
 options=('!emptydirs')
-source=(
-  "${url}/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz"
-  # https://github.com/rubocop/rubocop-ast/pull/278
-  "${url}/pull/278/commits/e897d99d91d4499e555c0d4053791b3a5b86defe.patch"
-)
-sha512sums=('203eb5a369cb8da2e3b40ed3856754a03139ab4395c9511250147155aed98cb86cf63bf9a7718cec8f7a33b9cd7f2995213ffc012b4237c0696c4861dbf55a34'
-            'f1c3a2f32b305bdbcae90342b0b3c7172f10f22c284dd7c6ec3262ec6b1eb39b447a8afe25334f7d69cda81b431821edfd2dccb17bc3263aa170b4e2b0aab516')
-b2sums=('47774c812912e8f964f68931bd2a7b4d9612983e7f4d5fdd94eea25537483b2bbb5685a86a1ed2230958e77a0b09a12dedc795b75b10c3d87f38b34586e0ea46'
-        '30a4c84db322502ff5f6231932d1fe8410dc312fb0f505320ffc6185426e6b94657d28f27a5b047c26162b683e0c5d4668eec2cc5211b8af32902ddc9d5562c3')
+source=("${url}/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz")
+sha512sums=('e4321c230f72ddbbdd7a637214ff32adecfdc9ef753434d077c5c7ba403a74c2a766cacdcc86f95e500980e71ddb7c2dbc25ba06dc6abfd3328b73fb3bb0d22b')
+b2sums=('d057eaf0fe4a133e366596058ff876c6145f5f3cece142f77dd1b14b3dd0cbc8f3fe49dcbac877ebd1a0a71c6066cb86017fb0f69152976b2b1f5ac59bb8a578')
 
 prepare() {
   cd "${_gemname}-${pkgver}"
-
-  patch --verbose --strip=1 --input="../e897d99d91d4499e555c0d4053791b3a5b86defe.patch"
 
   # update gemspec/Gemfile to allow newer version of the dependencies
   sed --in-place --regexp-extended 's|~>|>=|g' "${_gemname}.gemspec" Gemfile
@@ -46,6 +40,8 @@ prepare() {
 
   # we don't build from a git checkout
   sed --in-place --regexp-extended 's|git ls-files|find|' "${_gemname}.gemspec"
+
+  sed --in-place --regexp-extended '/knows all current node types/,/end/d' spec/rubocop/ast/traversal_spec.rb
 }
 
 build() {
