--- a/world/ruby-rubocop-rake/PKGBUILD
+++ b/world/ruby-rubocop-rake/PKGBUILD
@@ -4,19 +4,23 @@
 
 _gemname='rubocop-rake'
 pkgname="ruby-${_gemname}"
-pkgver=0.6.0
-pkgrel=4
+pkgver=0.7.1
+pkgrel=1
 pkgdesc='A RuboCop plugin for Rake'
 arch=('any')
 url="https://github.com/rubocop/${_gemname}"
 license=('MIT')
 depends=(
   ruby
+  ruby-lint_roller
   rubocop
 )
-makedepends=()
+makedepends=(
+  ruby-rdoc
+)
 checkdepends=(
   ruby-bundler
+  ruby-language_server-protocol
   ruby-parallel
   ruby-rake
   ruby-rexml
@@ -24,8 +28,8 @@ checkdepends=(
 )
 options=('!emptydirs')
 source=("${url}/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz")
-sha512sums=('e98233e5e0e8c4a9e03184db6e71c3c470f6fc301b8031d9bae6bb26f140b2169ae78a3ced35c34defb33b63489acb315b45d145f946aefb671b1edcc459b9c8')
-b2sums=('902b026a68629df848716a37bf759d30a4d10219955d3bd979413ba9245c8a9af2b0511c9f489f7e5d501df2bf1eb9351868d8955e10cd628fed6405d8088797')
+sha512sums=('e22863178832241406b1237b264e45ed747fe261910c2087fab6d4bcf3a82e1e69a92eb234fb90a99865a2609ffa02a60393f001e3acb91315e4b0318f179ce5')
+b2sums=('c01e0221712b3c05fdf916fb9b2e9bc93747fc99989c73973fad39c9d891abd9eaad940fc14f1ba551863c7f24a42db386ac7bf2e1e2242892954f609ddb5c41')
 
 prepare() {
   cd "${_gemname}-${pkgver}"
