--- a/world/ruby-safe_yaml/.artixlinux/pkgbase.yaml
+++ b/world/ruby-safe_yaml/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: ruby-safe_yaml
-  version: 1.0.5-4
+  version: 1.0.5-6
   arch:
     - any
   pkgname:
     - ruby-safe_yaml
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.0.5-4
+    version: 1.0.5-6
     packages:
-      - ruby-safe_yaml-1.0.5-4-any.pkg.tar.zst
+      - ruby-safe_yaml-1.0.5-6-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
