--- a/world/ruby-sequel/PKGBUILD
+++ b/world/ruby-sequel/PKGBUILD
@@ -2,8 +2,7 @@
 # Contributor: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=ruby-sequel
-pkgver=5.77.0
-_commit=88a4982c4482a124f40ef3fd63861ee19a9e9343
+pkgver=5.90.0
 pkgrel=2
 pkgdesc='Sequel: The Database Toolkit for Ruby'
 arch=(any)
@@ -12,20 +11,22 @@ license=(MIT)
 depends=(
   ruby
   ruby-bigdecimal
+  ruby-csv
 )
 makedepends=(
   git
   ruby-rdoc
 )
 checkdepends=(
-  ruby-rake
   ruby-minitest
   ruby-minitest-global_expectations
   ruby-minitest-hooks
+  ruby-rake
 )
 options=(!emptydirs)
-source=(git+https://github.com/jeremyevans/sequel.git#commit=$_commit)
-sha256sums=('a5f1118aef6c5ec4988fa826b1e8fb0dd5726fda5ce3ca4525dc742b290d1327')
+source=(git+https://github.com/jeremyevans/sequel.git#tag=$pkgver)
+sha512sums=('442bd15377fb57582535c1e323d8378d5e4fa45483554c3e7c2bc5af32e91eefd2d5d03d4f6451fdd6d2e02e2671cebc67f871cd2129381db7666e8a31bd8e15')
+b2sums=('406f3de84906aaf99a985dced569fb6d8c95b5fd4ef0e4c09f7ef769901024785ad758f156a6062f1f7bb19744d9421fa6a33789a1ba1564daa88b32c39b3ac3')
 
 prepare() {
   cd sequel
